:memo: 更新建议